[package]
name = "rust-flutter"
version = "0.1.1"
edition = "2021"

[[bin]]
path = "rust/main.rs"
name = "rust-hi"

[workspace]
members = [
    "rust/e01-tuple",
    "rust/e02-array",
    "rust/e03-move",
    "rust/e04-borrowing",
    "rust/e05-slice",
    "rust/e06-struct",
    "rust/e07-enum",
    "rust/e08-option",
    "rust/e09-module",
    "rust/e10-vector",
    "rust/e11-string",
    "rust/e12-hashmap",
    "rust/e13-result",
    "rust/e14-generic",
    "rust/e15-trait",
    "rust/e16-lifetime",
    "rust/e17-test",
    "rust/e18-rename",
    "rust/e19-closure",
    "rust/e20-re-exports",
    "rust/e21-pointer",
    "rust/e22-thread",
    "rust/e23-oop",
]